update GA trce code

--- a/weiSite.html
+++ b/weiSite.html
@@ -1203,4 +1203,19 @@
     });
 </script>
 
-<div id="udesk_container"></div></body></html>
+<div id="udesk_container"></div></body>
+
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-142253102-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-142253102-1');
+</script>
+
+
+
+</html>
