--- a/madeInMo.html
+++ b/madeInMo.html
@@ -384,4 +384,16 @@
 
 </body>
 
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-142253102-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-142253102-1');
+</script>
+
+
 </html>
