--- a/weiSiteX.html
+++ b/weiSiteX.html
@@ -199,4 +199,21 @@
 </script>
 
 
-</body></html>
+</body>
+
+
+
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-142253102-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-142253102-1');
+</script>
+
+
+
+</html>
