--- a/madeInMo.html
+++ b/madeInMo.html
@@ -85,6 +85,7 @@
                                     </li>
 									<li class="active"><a href="#">推廣活動</a>
                                         <ul class="dropdown">
+											<li><a href="./weimobSupport.html">疫境支援計劃</a></li>
 											<li><a href="./wechatPromo.html">一站式微信宣傳計劃</a></li>
                                             <li><a href="./madeInMo.html">澳門原創產品支持計劃</a></li>
                                         </ul>
@@ -383,17 +384,5 @@
     <script src="js/default-assets/active.js"></script>
 
 </body>
-
-
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-142253102-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-142253102-1');
-</script>
-
 
 </html>
