--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Title -->
-    <title>微盟澳門 WeimobMO</title> 
+    <title>微盟澳門 WeimobMO</title>
 
     <!-- Favicon -->
     <link rel="icon" href="./img/core-img/favicon.ico">
@@ -70,6 +70,7 @@
                                     </li>
 									<li><a href="#">推廣活動</a>
                                         <ul class="dropdown">
+											<li><a href="./weimobSupport.html">疫境支援計劃</a></li>
 											<li><a href="./wechatPromo.html">一站式微信宣傳計劃</a></li>
                                             <li><a href="./madeInMo.html">澳門原創產品支持計劃</a></li>
                                         </ul>
@@ -154,10 +155,11 @@
                             <!-- Welcome Text -->
                             <div class="col-12 col-md-9 col-lg-7">
                                 <div class="welcome-text mb-50">
-                                    <h2 data-animation="fadeInLeftBig" data-delay="200ms" data-duration="1s">微盟 <br> 掌櫃說</h2>
-                                    <h3 data-animation="fadeInLeftBig" data-delay="400ms" data-duration="1s">深度專訪微盟商戶</h3>
-                                    <p data-animation="fadeInLeftBig" data-delay="600ms" data-duration="1s">用短短幾分鐘的視頻揭示其品牌故事</p>
-                                    <a href="./weimobBoss.html" class="btn hami-btn btn-2" data-animation="fadeInLeftBig" data-delay="800ms" data-duration="1s">更多資訊</a>
+                                    <h2 data-animation="fadeInLeftBig" data-delay="200ms" data-duration="1s">微盟 <br> 疫境支援計劃</h2>
+                                    <h3 data-animation="fadeInLeftBig" data-delay="400ms" data-duration="1s">微盟全力協助中小企走出疫境</h3>
+                                    <h3 data-animation="fadeInUpBig" data-delay="400ms" data-duration="1s"></h3>
+                                    <p data-animation="fadeInUpBig" data-delay="600ms" data-duration="1s"></p>
+                                    <a href="./weimobSupport.html" class="btn hami-btn btn-2" data-animation="fadeInLeftBig" data-delay="800ms" data-duration="1s">更多資訊</a>
                                 </div>
                             </div>
                         </div>
@@ -948,18 +950,5 @@
     <script src="js/default-assets/active.js"></script>
 
 </body>
-
-
-
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-142253102-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-142253102-1');
-</script>
-
 
 </html>
