--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                             <div class="col-12 col-md-9 col-lg-7">
                                 <div class="welcome-text mb-50">
                                     <h2 data-animation="fadeInLeftBig" data-delay="200ms" data-duration="1s">微盟 <br> 疫境支援計劃</h2>
-                                    <h3 data-animation="fadeInLeftBig" data-delay="400ms" data-duration="1s">微盟全力協助中小企走出疫境</h3>
+                                    <h3 data-animation="fadeInLeftBig" data-delay="400ms" data-duration="1s">面對疫境, 微盟在行動</h3>
                                     <h3 data-animation="fadeInUpBig" data-delay="400ms" data-duration="1s"></h3>
                                     <p data-animation="fadeInUpBig" data-delay="600ms" data-duration="1s"></p>
                                     <a href="./weimobSupport.html" class="btn hami-btn btn-2" data-animation="fadeInLeftBig" data-delay="800ms" data-duration="1s">更多資訊</a>
