--- a/weimobSupport.html
+++ b/weimobSupport.html
@@ -110,7 +110,7 @@
                 <div class="col-12">
                     <div class="section-heading text-center">
                         <h2>疫境支援計劃</h2>
-                        <h3>微盟全力協助中小企走出疫境</h3>
+                        <h3>面對疫境, 微盟在行動</h3>
                     </div>
                 </div>
             </div>
