--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
     <!-- Price Plan Area End -->
 	
 	<!-- Case Ref Start -->
-    <section class="hami-price-plan-area section-padding-100-0">
+    <section class="hami-price-plan-area bg-gray section-padding-100-0">
         <div class="container">
             <div class="row">
                 <!-- Section Heading -->
@@ -494,7 +494,7 @@
                         </div>
                         <!-- Value -->
                         <div class="price-plan-value">
-							<img width="228" src="img/bg-img/colourmix.jpg" alt="">
+							<img width="228" src="img/bg-img/LF.jpg" alt="">
                         </div>
                     </div>
                 </div>
@@ -504,11 +504,11 @@
                     <div class="single-price-plan mb-100">
                         <!-- Title -->
                         <div class="price-plan-title">
-                            <h4>日本 一生美</h4>
+                            <h4>日本 近鐵百貨</h4>
                         </div>
                         <!-- Value -->
                         <div class="price-plan-value">
-                            <img width="228" src="img/bg-img/beauty.jpg" alt="">
+                            <img width="228" src="img/bg-img/KT.jpg" alt="">
                         </div>
                     </div>
                 </div>
@@ -519,7 +519,7 @@
     <!-- Case Ref End -->
 	
 	<!-- Call To Action Area Start -->
-	<section class="hami-call-to-action bg-gray section-padding-100-0" id="b2">
+	<section class="hami-call-to-action section-padding-100-0" id="b2">
 	    <div class="container">
             <div class="row">
                 <!-- Section Heading -->
@@ -694,7 +694,7 @@
     <!-- Call To Action Area End -->
 	
 	<!-- Call To Action Area Start -->
-	<section class="hami-call-to-action section-padding-100-0" id="b3">
+	<section class="hami-call-to-action bg-gray section-padding-100-0" id="b3">
 	    <div class="container">
             <div class="row">
                 <!-- Section Heading -->
