--- a/index.html
+++ b/index.html
@@ -223,6 +223,113 @@
         </div>
     </section>
     <!-- Find Domain Area End -->
+	
+	<!-- Case Ref Start -->
+    <section class="hami-price-plan-area section-padding-100-0">
+        <div class="container">
+            <div class="row">
+                <!-- Section Heading -->
+                <div class="col-12">
+                    <div class="section-heading text-center">
+                        <h2>行業案例</h2>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row justify-content-center">
+
+                <!-- Single Price Plan -->
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="single-price-plan mb-100">
+                        <!-- Title -->
+                        <div class="price-plan-title">
+                            <h4>澳門 DFA</h4>
+                        </div>
+                        <!-- Value -->
+                        <div class="price-plan-value">
+							<img width="228" src="img/bg-img/DFA.jpg" alt="">
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Single Price Plan -->
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="single-price-plan mb-100">
+                        <!-- Title -->
+                        <div class="price-plan-title">
+                            <h4>澳門 匯美易跨境</h4>
+                        </div>
+                        <!-- Value -->
+                        <div class="price-plan-value">
+							<img width="228" src="img/bg-img/HM.jpg" alt="">
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Single Price Plan -->
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="single-price-plan mb-100">
+                        <!-- Title -->
+                        <div class="price-plan-title">
+                            <h4>港澳 中免集團</h4>
+                        </div>
+                        <!-- Value -->
+                        <div class="price-plan-value">
+							<img width="228" src="img/bg-img/CDF.jpg" alt="">
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+			
+			<div class="row justify-content-center">
+
+                <!-- Single Price Plan -->
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="single-price-plan mb-100">
+                        <!-- Title -->
+                        <div class="price-plan-title">
+                            <h4>港澳 卡萊美</h4>
+                        </div>
+                        <!-- Value -->
+                        <div class="price-plan-value">
+							<img width="228" src="img/bg-img/colourmix.jpg" alt="">
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Single Price Plan -->
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="single-price-plan mb-100">
+                        <!-- Title -->
+                        <div class="price-plan-title">
+                            <h4>香港 龍豐集團</h4>
+                        </div>
+                        <!-- Value -->
+                        <div class="price-plan-value">
+							<img width="228" src="img/bg-img/LF.jpg" alt="">
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Single Price Plan -->
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="single-price-plan mb-100">
+                        <!-- Title -->
+                        <div class="price-plan-title">
+                            <h4>日本 近鐵百貨</h4>
+                        </div>
+                        <!-- Value -->
+                        <div class="price-plan-value">
+                            <img width="228" src="img/bg-img/KT.jpg" alt="">
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+    <!-- Case Ref End -->
 
     <!-- Features Area Start -->
     <section class="hami-features-area bg-gray section-padding-100">
@@ -411,115 +518,8 @@
     </section>
     <!-- Price Plan Area End -->
 	
-	<!-- Case Ref Start -->
-    <section class="hami-price-plan-area bg-gray section-padding-100-0">
-        <div class="container">
-            <div class="row">
-                <!-- Section Heading -->
-                <div class="col-12">
-                    <div class="section-heading text-center">
-                        <h2>行業案例</h2>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row justify-content-center">
-
-                <!-- Single Price Plan -->
-                <div class="col-12 col-md-6 col-lg-4">
-                    <div class="single-price-plan mb-100">
-                        <!-- Title -->
-                        <div class="price-plan-title">
-                            <h4>澳門 DFA</h4>
-                        </div>
-                        <!-- Value -->
-                        <div class="price-plan-value">
-							<img width="228" src="img/bg-img/DFA.jpg" alt="">
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Single Price Plan -->
-                <div class="col-12 col-md-6 col-lg-4">
-                    <div class="single-price-plan mb-100">
-                        <!-- Title -->
-                        <div class="price-plan-title">
-                            <h4>澳門 匯美易跨境</h4>
-                        </div>
-                        <!-- Value -->
-                        <div class="price-plan-value">
-							<img width="228" src="img/bg-img/HM.jpg" alt="">
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Single Price Plan -->
-                <div class="col-12 col-md-6 col-lg-4">
-                    <div class="single-price-plan mb-100">
-                        <!-- Title -->
-                        <div class="price-plan-title">
-                            <h4>港澳 中免集團</h4>
-                        </div>
-                        <!-- Value -->
-                        <div class="price-plan-value">
-							<img width="228" src="img/bg-img/CDF.jpg" alt="">
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-			
-			<div class="row justify-content-center">
-
-                <!-- Single Price Plan -->
-                <div class="col-12 col-md-6 col-lg-4">
-                    <div class="single-price-plan mb-100">
-                        <!-- Title -->
-                        <div class="price-plan-title">
-                            <h4>港澳 卡萊美</h4>
-                        </div>
-                        <!-- Value -->
-                        <div class="price-plan-value">
-							<img width="228" src="img/bg-img/colourmix.jpg" alt="">
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Single Price Plan -->
-                <div class="col-12 col-md-6 col-lg-4">
-                    <div class="single-price-plan mb-100">
-                        <!-- Title -->
-                        <div class="price-plan-title">
-                            <h4>香港 龍豐集團</h4>
-                        </div>
-                        <!-- Value -->
-                        <div class="price-plan-value">
-							<img width="228" src="img/bg-img/LF.jpg" alt="">
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Single Price Plan -->
-                <div class="col-12 col-md-6 col-lg-4">
-                    <div class="single-price-plan mb-100">
-                        <!-- Title -->
-                        <div class="price-plan-title">
-                            <h4>日本 近鐵百貨</h4>
-                        </div>
-                        <!-- Value -->
-                        <div class="price-plan-value">
-                            <img width="228" src="img/bg-img/KT.jpg" alt="">
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-    </section>
-    <!-- Case Ref End -->
-	
 	<!-- Call To Action Area Start -->
-	<section class="hami-call-to-action section-padding-100-0" id="b2">
+	<section class="hami-call-to-action bg-gray section-padding-100-0" id="b2">
 	    <div class="container">
             <div class="row">
                 <!-- Section Heading -->
@@ -694,7 +694,7 @@
     <!-- Call To Action Area End -->
 	
 	<!-- Call To Action Area Start -->
-	<section class="hami-call-to-action bg-gray section-padding-100-0" id="b3">
+	<section class="hami-call-to-action section-padding-100-0" id="b3">
 	    <div class="container">
             <div class="row">
                 <!-- Section Heading -->
