--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
             <div class="row justify-content-center">
 
                 <!-- Single Price Plan -->
-                <div class="col-12 col-md-6 col-lg-4">
+                <div class="col-12 col-md-6 col-lg-3">
                     <div class="single-price-plan mb-100">
                         <!-- Title -->
                         <div class="price-plan-title">
@@ -253,7 +253,7 @@
                 </div>
 
                 <!-- Single Price Plan -->
-                <div class="col-12 col-md-6 col-lg-4">
+                <div class="col-12 col-md-6 col-lg-3">
                     <div class="single-price-plan mb-100">
                         <!-- Title -->
                         <div class="price-plan-title">
@@ -265,9 +265,23 @@
                         </div>
                     </div>
                 </div>
+				
+				<!-- Single Price Plan -->
+                <div class="col-12 col-md-6 col-lg-3">
+                    <div class="single-price-plan mb-100">
+                        <!-- Title -->
+                        <div class="price-plan-title">
+                            <h4>澳門 艾萊海淘</h4>
+                        </div>
+                        <!-- Value -->
+                        <div class="price-plan-value">
+							<img width="228" src="img/bg-img/OSM.jpg" alt="">
+                        </div>
+                    </div>
+                </div>
 
                 <!-- Single Price Plan -->
-                <div class="col-12 col-md-6 col-lg-4">
+                <div class="col-12 col-md-6 col-lg-3">
                     <div class="single-price-plan mb-100">
                         <!-- Title -->
                         <div class="price-plan-title">
@@ -285,7 +299,7 @@
 			<div class="row justify-content-center">
 
                 <!-- Single Price Plan -->
-                <div class="col-12 col-md-6 col-lg-4">
+                <div class="col-12 col-md-6 col-lg-3">
                     <div class="single-price-plan mb-100">
                         <!-- Title -->
                         <div class="price-plan-title">
@@ -299,7 +313,7 @@
                 </div>
 
                 <!-- Single Price Plan -->
-                <div class="col-12 col-md-6 col-lg-4">
+                <div class="col-12 col-md-6 col-lg-3">
                     <div class="single-price-plan mb-100">
                         <!-- Title -->
                         <div class="price-plan-title">
@@ -313,7 +327,7 @@
                 </div>
 
                 <!-- Single Price Plan -->
-                <div class="col-12 col-md-6 col-lg-4">
+                <div class="col-12 col-md-6 col-lg-3">
                     <div class="single-price-plan mb-100">
                         <!-- Title -->
                         <div class="price-plan-title">
@@ -322,6 +336,20 @@
                         <!-- Value -->
                         <div class="price-plan-value">
                             <img width="228" src="img/bg-img/KT.jpg" alt="">
+                        </div>
+                    </div>
+                </div>
+				
+				<!-- Single Price Plan -->
+                <div class="col-12 col-md-6 col-lg-3">
+                    <div class="single-price-plan mb-100">
+                        <!-- Title -->
+                        <div class="price-plan-title">
+                            <h4>日本 一生美</h4>
+                        </div>
+                        <!-- Value -->
+                        <div class="price-plan-value">
+                            <img width="228" src="img/bg-img/ones.jpg" alt="">
                         </div>
                     </div>
                 </div>
