--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                     <div class="single-price-plan mb-100">
                         <!-- Title -->
                         <div class="price-plan-title">
-                            <h4>中免集團</h4>
+                            <h4>中國免稅</h4>
 							<h5>港澳</h5>
                         </div>
                         <!-- Value -->
