update ref brand

--- a/index.html
+++ b/index.html
@@ -258,8 +258,8 @@
                     <div class="single-price-plan mb-100">
                         <!-- Title -->
                         <div class="price-plan-title">
-                            <h4>中國免稅</h4>
-							<h5>港澳</h5>
+                            <h4>中免集團</h4>
+							<h5>澳門</h5>
                         </div>
                         <!-- Value -->
                         <div class="price-plan-value">
@@ -342,7 +342,7 @@
                         <!-- Title -->
                         <div class="price-plan-title">
                             <h4>卡萊美 Colourmix</h4>
-							<h5>港澳</h5>
+							<h5>澳門</h5>
                         </div>
                         <!-- Value -->
                         <div class="price-plan-value">
@@ -357,7 +357,7 @@
                         <!-- Title -->
                         <div class="price-plan-title">
                             <h4>卓悅 Bonjour</h4>
-							<h5>港澳</h5>
+							<h5>澳門</h5>
                         </div>
                         <!-- Value -->
                         <div class="price-plan-value">
@@ -371,12 +371,12 @@
                     <div class="single-price-plan mb-100">
                         <!-- Title -->
                         <div class="price-plan-title">
-                            <h4>龍豐集團</h4>
-							<h5>香港</h5>
+                            <h4>iSPORT</h4>
+							<h5>澳門</h5>
                         </div>
                         <!-- Value -->
                         <div class="price-plan-value">
-							<img width="228" src="img/bg-img/LF.jpg" alt="">
+							<img width="228" src="img/bg-img/ISP.jpg" alt="">
                         </div>
                     </div>
                 </div>   
