--- a/index.html
+++ b/index.html
@@ -1071,11 +1071,10 @@
                     <div class="col-12 col-sm-12 col-lg-12">
                         <div class="single-footer-widget mb-80">
                             <!-- Widget Title -->
-                            <h5 class="widget-title">歡迎透過電郵或掃瞄 QR Code 留下訊息，<br/>微盟澳門的服務人員將盡快與您聯絡。</h5>
+                            <h5 class="widget-title">歡迎添加微信留下訊息，<br/>微盟澳門的服務人員將盡快與您聯絡。</h5>
                             <!-- Footer Nav -->
                             <ul class="footer-nav">
-                                <img width="228" src="img/bg-img/W19001.jpg" alt="">
-								<p>W19001</p>
+								<p>Wechat ID: weimobmo</p>
                             </ul>
                         </div>
                     </div>
