--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                         </div>
                         <!-- Value -->
                         <div class="price-plan-value">
-							<img width="228" src="img/bg-img/BJ.jpg" alt="">
+							<img width="228" src="img/bg-img/BJ.png" alt="">
                         </div>
                     </div>
                 </div>    
