--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
 	    <div class="row justify-content-center">
 			
 		<!-- Single Price Plan -->
-                <div class="col-12 col-md-4 col-lg-4">
+                <div class="col-12 col-md-3 col-lg-3">
                     <div class="single-price-plan mb-100">
                         <!-- Title -->
                         <div class="price-plan-title">
@@ -301,24 +301,9 @@
                         </div>
                     </div>
                 </div>
-				
-		<!-- Single Price Plan -->
-                <div class="col-12 col-md-4 col-lg-4">
-                    <div class="single-price-plan mb-100">
-                        <!-- Title -->
-                        <div class="price-plan-title">
-                            <h4>卓悅 Bonjour</h4>
-							<h5>澳門</h5>
-                        </div>
-                        <!-- Value -->
-                        <div class="price-plan-value">
-							<img width="228" src="img/bg-img/BJ.png" alt="">
-                        </div>
-                    </div>
-                </div>    
 			
 		<!-- Single Price Plan -->
-                <div class="col-12 col-md-4 col-lg-4">
+                <div class="col-12 col-md-3 col-lg-3">
                     <div class="single-price-plan mb-100">
                         <!-- Title -->
                         <div class="price-plan-title">
@@ -330,7 +315,37 @@
 							<img width="228" src="img/bg-img/ISP.jpg" alt="">
                         </div>
                     </div>
-                </div>   
+                </div>
+
+		<!-- Single Price Plan -->
+                <div class="col-12 col-md-3 col-lg-3">
+                    <div class="single-price-plan mb-100">
+                        <!-- Title -->
+                        <div class="price-plan-title">
+                            <h4>卓悅 Bonjour</h4>
+							<h5>澳門</h5>
+                        </div>
+                        <!-- Value -->
+                        <div class="price-plan-value">
+							<img width="228" src="img/bg-img/BJ.png" alt="">
+                        </div>
+                    </div>
+                </div> 
+
+		<!-- Single Price Plan -->
+                <div class="col-12 col-md-3 col-lg-3">
+                    <div class="single-price-plan mb-100">
+                        <!-- Title -->
+                        <div class="price-plan-title">
+                            <h4>LK買手店</h4>
+							<h5>澳門</h5>
+                        </div>
+                        <!-- Value -->
+                        <div class="price-plan-value">
+							<img width="228" src="img/bg-img/LK.png" alt="">
+                        </div>
+                    </div>
+                </div>
 				
             </div>
 		
